--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ZPW-Xc-kUM">
                                         <rect key="frame" x="54" y="97" width="432" height="33"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2W-qe-GeR">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2W-qe-GeR">
                                                 <rect key="frame" x="0.0" y="0.0" width="206" height="33"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
                                                 <state key="normal" title="Create List">
@@ -402,7 +402,7 @@
                                                     <action selector="createListBtnAction:" destination="ovF-7k-eYv" eventType="touchUpInside" id="mfD-a6-C9S"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ywa-mG-Ofa">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ywa-mG-Ofa">
                                                 <rect key="frame" x="226" y="0.0" width="206" height="33"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                                 <state key="normal" title="Cancel">
@@ -980,12 +980,9 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2FA-e0-oxW">
-                                        <rect key="frame" x="200" y="219" width="140" height="33"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="140" id="5UY-VL-UPb"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="15"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2FA-e0-oxW">
+                                        <rect key="frame" x="162" y="219" width="216" height="33"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
                                         <state key="normal" title="Create Account">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -995,6 +992,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="2FA-e0-oxW" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.4" id="39S-zC-h7p"/>
                                     <constraint firstItem="9wg-ge-abF" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="Bpd-jd-u5Y"/>
                                     <constraint firstItem="M8e-bd-zuC" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="Cwf-9O-hRv"/>
                                     <constraint firstItem="XCh-zd-wuJ" firstAttribute="width" secondItem="r7b-bU-Spd" secondAttribute="width" multiplier="0.8" id="GqB-K3-cXL"/>
