--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -332,7 +332,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.46432637710000002" green="0.83866794580000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.91764705882352937" green="0.91674759336300304" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Rq3-XE-44K" firstAttribute="centerX" secondItem="YI0-HO-dgz" secondAttribute="centerX" id="5ug-pR-A1h"/>
                             <constraint firstItem="Rq3-XE-44K" firstAttribute="top" secondItem="lnu-aU-Idl" secondAttribute="bottom" id="A0g-DL-Jdg"/>
